// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`can make a body tag 1`] = `
<body
  data-site-id="1234-568473-29837594-387465"
/>
`;

exports[`can make a body tag 2`] = `
<body
  data-site-id="1234-568473-29837594-387465"
>
  <p>
    test-body-content
  </p>
</body>
`;

exports[`can make a tag 1`] = `
<title>
  test title | test company
</title>
`;
